base/argocd/middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: argocd-strip-prefix
  namespace: argocd
spec:
  stripPrefix:
    prefixes:
      - /argocd
    forceSlash: false
