base/argocd/argocd-server-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: argocd-server
  namespace: argocd
spec:
  template:
    spec:
      containers:
        - name: argocd-server
          args:
            - /usr/local/bin/argocd-server
            - --repo-server
            - argocd-repo-server:8081
            - --rootpath
            - /argocd
            - --basehref
            - /argocd/
            - --insecure
            - --staticassets
            - /shared/app
            - --dex-server
            - http://argocd-dex-server:5556
            - --redis
            - argocd-redis:6379
            - --loglevel
            - debug
            - --logformat
            - text
