base/argocd/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: argocd-server
  namespace: argocd
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`192.168.45.238`) && PathPrefix(`/`)
      kind: Rule
      services:
        - name: argocd-server
          port: 80
          scheme: http
